class Config:
    game_width = 1920
    game_height = 1080

    fps = 60
    panel_size = (200,440)

    game_color = {'W':(255,255,255), 'BL':(0,0,0), 'R':(255,0,0), 'G':(0,255,0), 'B':(0,0,255), 'LIGHTGRAY':(200,200,200), "LPP":(255,50,255), "PP":(100,0,100)}

    counter_loc = {"A":((1097.8, 316.4),(1097.8, 383.8)), 
                   "B":((1386.5, 316.4),(1386.5, 383.8)), 
                   "D":((1677.6, 316.4),(1677.6, 383.8)), 
                   "F":((1097.8, 530.9),(1097.8, 598.2)), 
                   "K":((1677.5, 530.9),(1677.5, 598.2)),
                   "shaker" : ((1304.1, 754.9),(1304.1, 787))}
    
    counter_size = (25.6, 58.6)
    shaker_size = (43.3, 22.5)
    
    aged_rocks_loc = {"Rocks" : (1101.4, 703.7),
                      "Aged" : (1142.7, 703.7)}
    
    Text_loc = (56,724)
    Text_size = 50

    
    aged_rocks_size = (34.3, 78.4)